fix(#8): Update the header layout and align the home button with the header content

--- a/services/files/front/components/game-page/game-page.css
+++ b/services/files/front/components/game-page/game-page.css
@@ -1,5 +1,6 @@
 header {
     height: 20%;
+    display: flex;
 }
 
 main {
